change in calculate stats --> getMax and getDistinct