@@ -7,8 +7,10 @@ import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.Arguments;
 import org.junit.jupiter.params.provider.MethodSource;
 
+import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
+import java.util.List;
 import java.util.stream.Stream;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
@@ -17,52 +19,70 @@ import static org.junit.jupiter.api.Assertions.assertThrows;
 class IntegerContentStatsCalculatorTest {
 
     @Test
-    void calculateStatsWhenContentEmpty() {
+    void calculateStatsWhenContentIsNull() {
+        //when
         IntegerContentStatsCalculator calculator = new IntegerContentStatsCalculator();
+
+        //then
         assertThrows(StatsCalculatingException.class, () -> calculator.calculateStats(null));
     }
 
+    @Test
+    void calculateStatsWhenContentEmpty() {
+        //given
+        List<Integer> content = new ArrayList<>();
 
-    @ParameterizedTest
-    @MethodSource("calculateStatsWhenContentHas1ElementTestData")
-    void calculateStatsWhenContentHas1Element(Collection<Integer> content, Stats<Integer> expectedContent) throws StatsCalculatingException {
+        //when
         IntegerContentStatsCalculator calculator = new IntegerContentStatsCalculator();
-        Stats<Integer> stats = calculator.calculateStats(content);
-        assertEquals(stats, expectedContent);
+
+        //then
+        assertThrows(StatsCalculatingException.class, () -> calculator.calculateStats(content));
     }
 
-    static Stream<Arguments> calculateStatsWhenContentHas1ElementTestData() {
-        return Stream.of(
-                Arguments.arguments(Arrays.asList(10), new Stats<>(1, 1, 10))
-        );
-    }
 
-    @ParameterizedTest
-    @MethodSource("calculateStatsWhenContentHasMoreElementsAndAllUniqueTestData")
-    void calculateStatsWhenContentHasMoreElementsAndAllUnique(Collection<Integer> content, Stats<Integer> expectedContent) throws StatsCalculatingException {
+    @Test
+    void calculateStatsWhenContentHas1Element() throws StatsCalculatingException {
+        //given
+        List<Integer> content = List.of(10);
+        Stats<Integer> expectedStats = new Stats<>(1, 1, 10);
         IntegerContentStatsCalculator calculator = new IntegerContentStatsCalculator();
+
+        //when
         Stats<Integer> stats = calculator.calculateStats(content);
-        assertEquals(stats, expectedContent);
+
+        //then
+        assertEquals(expectedStats, stats);
     }
 
-    static Stream<Arguments> calculateStatsWhenContentHasMoreElementsAndAllUniqueTestData() {
-        return Stream.of(
-                Arguments.arguments(Arrays.asList(10, 50, 40, 20, 70, 130, 1), new Stats<>(7, 7, 130))
-        );
-    }
 
-    @ParameterizedTest
-    @MethodSource("calculateStatsWhenContentHasMoreNonUniqueElementsTestData")
-    void calculateStatsWhenContentHasMoreNonUniqueElements(Collection<Integer> content, Stats<Integer> expectedContent) throws StatsCalculatingException {
+    @Test
+    void calculateStatsWhenContentHasMoreElementsAndAllUnique() throws StatsCalculatingException {
+        //given
+        List<Integer> content = List.of(10, 50, 40, 20, 70, 130, 1);
+        Stats<Integer> expectedStats = new Stats<>(7, 7, 130);
         IntegerContentStatsCalculator calculator = new IntegerContentStatsCalculator();
+
+        //when
         Stats<Integer> stats = calculator.calculateStats(content);
-        assertEquals(stats, expectedContent);
+
+        //then
+        assertEquals(expectedStats, stats);
     }
 
-    static Stream<Arguments> calculateStatsWhenContentHasMoreNonUniqueElementsTestData() {
-        return Stream.of(
-                Arguments.arguments(Arrays.asList(10, 20, 14, 20, 20, 12, 1), new Stats<>(7, 5, 20))
-        );
+
+    @Test
+    void calculateStatsWhenContentHasMoreNonUniqueElements() throws StatsCalculatingException {
+        //given
+        List<Integer> content = List.of(10, 20, 14, 20, 20, 12, 1);
+        Stats<Integer> expectedStats = new Stats<>(7, 5, 20);
+        IntegerContentStatsCalculator calculator = new IntegerContentStatsCalculator();
+
+        //when
+        Stats<Integer> stats = calculator.calculateStats(content);
+
+        //then
+        assertEquals(expectedStats, stats);
     }
+
 
 }
